--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "flow-runtime",
+  "name": "runtime-types",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Use flow type information at runtime. Useful for validations, mapping to an ORM, and more. ",
+  "keywords": ["orm", "flow", "type", "static types", "runtime", "validate", "validation", "object", "valid", "typecheck"],
+  "main": "build/index.js",
   "scripts": {
-    "test": "babel-node test/test.js",
-    "build": "node_modules/.bin/babel -d build/ src/ test/"
+    "prepublish": "npm run build",
+    "test": "babel-node test/example.js",
+    "build": "node_modules/.bin/babel -d build/ src/"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Sean Hess",
+  "license": "MIT",
   "dependencies": {
-    "bluebird": "2.9.26",
     "esprima-fb": "15001.1.0-dev-harmony-fb",
     "lodash": "3.9.3"
   },
