--- a/package.json
+++ b/package.json
@@ -4,6 +4,12 @@
   "description": "Use flow type information at runtime. Useful for validations, mapping to an ORM, and more. ",
   "keywords": ["orm", "flow", "type", "static types", "runtime", "validate", "validation", "object", "valid", "typecheck"],
   "main": "build/index.js",
+  "files": ["./src/validate.js"],
+  "repository" : {
+    "type" : "git",
+    "url" : "https://github.com/seanhess/runtime-types.git"
+  },
+  "homepage": "https://github.com/seanhess/runtime-types",
   "scripts": {
     "prepublish": "npm run build",
     "test": "babel-node test/example.js",
