--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "author": {
     "name": "Sean Hess",
-    "url":  "http://seanhess.github.io"
+    "url": "http://seanhess.github.io"
   },
   "license": "MIT",
   "dependencies": {
@@ -35,6 +35,8 @@
     "lodash": "3.9.3"
   },
   "devDependencies": {
-    "babel": "5.4.7"
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0"
   }
 }
